--- a/mnd3vli-cv.tex
+++ b/mnd3vli-cv.tex
@@ -56,7 +56,7 @@
     \end{itemize}
     \item \textbf{Computing}
         \begin{itemize}
-            \item {Python, Bash, Git, LaTeX, Excel, Biopython, NCBI, BLAST, UniProt, RCSB PDB}  
+            \item {Python, Bash, Git, Excel, Biopython, NCBI, BLAST, UniProt, RCSB PDB}  
         \end{itemize}
 \end{itemize}
 
